# alarm-clock

./: .bzrignore  .clang-format  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.decl  NEWS  README  README.md  autogen.sh  clang-format.sh  config.h.in  configure.ac
cmake/: Pod2man.cmake
data/: Makefile.am  alarm-clock-applet.desktop.in  alarm-clock-applet_autostart.desktop.in  alarm-clock.css  alarm-clock.schemas  alarm-clock.schemas.in  alarm-clock.ui  io.github.alarm-clock-applet.gschema.xml
data/icons/: Makefile.am  render-icon.sh
debian/: CMakeLists.txt  alarm-clock-applet.1  alarm-clock-applet.manpages  changelog  control  copyright  rules
gconf-migration/: CMakeLists.txt  alarm-clock-gconf-migration.c  alarm-clock.schemas
po/: CMakeLists.txt  LINGUAS  POTFILES.in  POTFILES.skip  alarm-clock-applet.pot  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  es.po  et.po  fi.po  fo.po  fr.po  gl.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  ka.po  la.po  ms.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ru.po  si.po  sv.po  template.pot  tr.po  (+3 more)
src/: AlarmClock.server.in  CMakeLists.txt  GNOME_AlarmApplet.server  GNOME_AlarmApplet.server.in  Makefile  Makefile.am  Makefile.old  alarm-actions.c  alarm-actions.h  alarm-applet.c  alarm-applet.h  alarm-clock-applet.pod  alarm-clock.schemas  alarm-enums.h  alarm-gconf.c  alarm-gconf.h  alarm-glib-enums.c.etemplate  alarm-glib-enums.h.etemplate  alarm-gsettings.c  alarm-gsettings.h  alarm-list-window.c  alarm-list-window.h  alarm-settings.c  alarm-settings.h  alarm.c  alarm.h  alarm.schemas  alarms-list.c  alarms-list.h  config.h.in  edit-alarm.c  edit-alarm.h  list-entry.c  list-entry.h  player.c  player.h  prefs.c  prefs.h  spec.txt  ui.c  (+3 more)
src/tests/: Makefile.am  glade_view.c  test_alarm.c  test_gconf_recursive.c  test_libnotify.c  test_list_entry.c  test_player.c  test_util.c  testutils.h
src/ui/: Makefile.am  alarm-applet.glade  alarm-applet.glade.bak  alarm-applet.gladep  alarm-clock.glade
ui/: alarm-applet.gladep.bak
